# eufy-security-python

./: .dockerignore  .env.example  .env.local.example  .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.multistage  Makefile  README.md  REFACTOR_SUMMARY.md  SUMMARY.md  TEST_STATUS.md  docker-compose.yml  pyproject.toml  quickstart.sh  render.yaml  requirements.txt  test_get_commands.py
config/: cameras.txt  config.example.yaml  config.yaml
deprecated/: test_video_recorder.py
src/: __init__.py  main.py  orchestrator.py
src/api/: __init__.py  routes.py
src/clients/: __init__.py  websocket_client.py
src/handlers/: __init__.py  battery_handler.py  lookup_failure_handler.py  motion_handler.py  offline_handler.py
src/models/: __init__.py  errors.py  events.py
src/services/: __init__.py  camera_registry.py  connection_tracker.py  device_health_checker.py  error_logger.py  state_timeout_checker.py  storage_manager.py  video_recorder.py  workato_client.py
src/utils/: __init__.py  config.py  logger.py  retry.py
tests/: __init__.py  conftest.py  test_api_routes.py  test_config.py  test_device_health_checker.py  test_handlers.py  test_integration.py  test_main.py  test_models.py  test_orchestrator.py  test_state_timeout_checker.py  test_websocket_client.py  test_workato_client.py
